# mcenter

./: .gitignore  Dockerfile  conftest.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
mcenter/: .dockerignore  manage.py  schema.yml
mcenter/appointment/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  test_view.py  urls.py  views.py
mcenter/appointment/migrations/: 0001_initial.py  0002_initial.py  0002_rename_appointment_appoin_doctor__83f254_idx_appointment_doctor__7bf40a_idx_and_more.py  0003_alter_appointment_status_alter_doctor_doctor.py  0003_remove_appointment_ended_time_gt_started_time_and_more.py  0004_alter_appointment_timestamp.py
mcenter/main/: models.py
mcenter/main/migrations/: 0001_initial.py
mcenter/mcenter/: asgi.py  settings.py  urls.py  wsgi.py
mcenter/users/: admin.py  models.py  serializers.py  services.py  test_view.py  urls.py  views.py
mcenter/users/migrations/: 0001_initial.py  0002_user_phone.py  0002_users_image_users_role.py  0003_alter_user_phone.py  0003_alter_users_email_alter_users_username.py  0004_alter_users_image.py
